2004-05-02  Stefan Jahn  <stefan@lkcc.org>

	* diode.cpp (Diode): Added more properties to the diode
	model.

2004-04-30  Michael Margraf  <michael.margraf@alumni.tu-berlin.de>

	* fixed behaviour of combo box in component dialog

2004-02-09  Stefan Jahn  <stefan@lkcc.org>

	* diode.cpp (Diode): Added new 'n' property to diode model.

2004-02-03  Stefan Jahn  <stefan@lkcc.org>

	* substrate.cpp, symtrafo.cpp, transformer.cpp: Fixed some
	typos in the property descriptions.

	* diode.cpp (Diode): Added 'Is' property to diode component.

2004-01-21  Stefan Jahn  <stefan@lkcc.org>

	* componentdialog.cpp:  Added translatable strings.